# rta-dataprocessor

./: .bashrc_rtadataprocessor  .gitignore  .gitmodules  CMakeLists.txt  Command.py  LICENSE  Makefile  MonitoringPoint.py  MonitoringThread.py  ProcessDataConsumer.py  README.md  Supervisor.py  WorkerThread.py  bootstrap.sh  cmake_install.cmake  config.json  config1.json  config_2.json  config_forwarder.json  config_kafka.json  config_test_3docker.json  config_type_rp.json  config_type_rp_host.json  confignet.json  docker-compose.yml  hosts  python_client.py  start_acs.sh  start_acs_containers.sh
c++/: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  config_type_rp.json
c++/include/: MonitoringPoint.h  MonitoringThread.h  Supervisor.h  Supervisor1.h  Supervisor2.h  ThreadSafeQueue.h  Worker1.h  Worker2.h  WorkerBase.h  WorkerLogger.h  WorkerManager.h  WorkerManager1.h  WorkerProcess.h  WorkerThread.h
c++/include/psutil-cpp/: utils.hpp
c++/src/: Supervisor.cpp  WorkerBase.cpp  WorkerLogger.cpp  WorkerManager.cpp  WorkerProcess.cpp  WorkerThread.cpp
c++/src/rtadp-proto/: ProcessDataConsumer1.cpp  Supervisor1.cpp  Supervisor2.cpp  Worker1.cpp  Worker2.cpp  WorkerManager1.cpp  WorkerManager2.cpp
c++/testavro/: avro_schema.py
env/: Dockerfile.amd  Dockerfile.arm  README.md  bootstrap.sh  entrypoint.sh
env/keys/: id_rsa  id_rsa.pub
gui/data/: acs_graph.json  acs_json.json  prova.json  prova1.json
gui/data/ooqs/: WorkerManager-RTADP1-Rate.json  WorkerManager-RTADP1-S22Mean.json  WorkerManager-RTADP2-Rate.json  config.json  test.json
gui/env/: requirements.txt
gui/src/: dash_app.py  gui.py  json_converter.py  sunchart_app.py  sunchart_v2.py  sunchart_v21.py  sunchart_v22.py  test.py
include/: ConfigurationManager.h  MonitoringThread.h  Supervisor.h  Supervisor2.h  ThreadSafeQueue.h  Worker2.h  WorkerBase.h  WorkerLogger.h  WorkerManager.h  WorkerManager2.h  WorkerProcess.h  WorkerThread.h
ooqs-proto/: ProcessDataConsumer.py  ProcessDataConsumer1.py  ProcessDataConsumer2.py  Supervisor1.py  Supervisor2.py  Worker1.py  Worker2.py  WorkerManager1.py  WorkerManager2.py  WorkerProcess1.py  WorkerThread1.py  WorkerThread2.py
pushpull/: Pull.py
rta_dataprocessor/CDB/MACI/Components/: Components.xml
rta_dataprocessor/idl/: Makefile  rtadataprocessor.idl  rtamanager.idl
rta_dataprocessor/src/: Makefile
rta_dataprocessor/src/ooqsdataprocessor/: CommanderImpl.py  DataProcessorImpl.py
rta_dataprocessor/src/rtamanagerImpl/: CommanderImpl.py  DataProcessorImpl.py
rtadp-proto/: ProcessDataConsumer1.py  ProcessDataConsumer2.py  Supervisor1.py  Supervisor2.py  Worker1.py  Worker2.py  WorkerManager1.py  WorkerManager2.py  avro_schema.json  avro_schema.py  workerconfig.json
rtadp-proto/ACS/: .bashrc  README.md  docker-compose.yml  start_acs_containers.sh
rtadp-proto/ACS/CDB/MACI/Components/: Components.xml
rtadp-proto/ACS/CDB/MACI/Containers/pyContainer1/: pyContainer1.xml
rtadp-proto/ACS/CDB/MACI/Manager/: Manager.xml
rtadp-proto/ACS/idl/: rtamanager.idl
rtadp-proto/ACS/object/: rtamanagerC.cpp  rtamanagerC.d  rtamanagerC.h  rtamanagerS.cpp  rtamanagerS.d  rtamanagerS.h
rtadp-proto/ACS/src/: Makefile  Makefile.mk  module.mk
rtadp-proto/ACS/src/rtamanagerImpl/: CommanderImpl.py  DataProcessorImpl.py  MonitoringImpl.py
rtadp-proto/testavro/: AVROConsumer.py
src/: ConfigurationManager.cpp  MonitoringThread.cpp  MonitorintPoint.cpp  Supervisor.cpp  WorkerBase.cpp  WorkerLogger.cpp  WorkerManager.cpp  WorkerProcess.cpp  WorkerThread.cpp
src/rtadp-proto/: ProcessDataConsumer1.cpp  Supervisor1.cpp  Worker1.cpp  WorkerManager1.cpp
src/rtadp-proto/ProcessDataConsumer2/: ProcessDataConsumer2.cpp
test/: testmulti.py  testprocess.py  testprocessvar.py
testavro/: AVROConsumer.py  AVROFileGenerator.py  AVROProducer.py
testavroproducer/: AVROConsumer.py  AVROProducer.py
testkafka/: README.md  Supervisor1.py  Worker1.py  docker-compose.yml  producer.py
testpubsub/: Publisher.py  Subscriber.py
testpushpull/: Pull.py
workers/: Command.py  ConfigurationManager.py  Forwarder.py  Incorrect_file.json  MonitoringPoint.py  MonitoringThread.py  ProcessDataConsumer.py  ProcessMonitoring.py  ProcessMonitoringThread.py  SendCommand.py  SendConfig.py  SendWorkerConfig.py  Supervisor.py  SupervisorKafka.py  WorkerBase.py  WorkerLogger.py  WorkerManager.py  WorkerProcess.py  WorkerThread.py  example.txt  send_data.json  setup.py  test_ConfigurationManager.py  test_Supervisor.py  test_configuration_manager.json
